refatoração da criação do menu

--- a/svsa-tp/src/main/webapp/WEB-INF/template/Header.xhtml
+++ b/svsa-tp/src/main/webapp/WEB-INF/template/Header.xhtml
@@ -13,7 +13,7 @@
 				<div class="card">
 					<h:form>											
 						<p:menubar styleClass="menubar"
-							model="#{newMenuBean.menu}">		
+							model="#{autenticacaoBean.menu}">		
 							<p:commandButton value="Home" action="/index.xhtml" ajax="false"/>											
                           
 						</p:menubar>
