header do svsa-ep, com a aba de ocorrência e a página de pesquisa e formulário.

--- a/svsa-tp/src/main/webapp/WEB-INF/template/menu.xml
+++ b/svsa-tp/src/main/webapp/WEB-INF/template/menu.xml
@@ -1,6 +1,11 @@
 <!DOCTYPE xml>
 <menu>
-	<submenu label="Usuario" icon="ui-icon-home">
+	<submenu label="Ocorrências" icon="ui-icon-home">
+	<grupo value="COORDENADORES"></grupo>
+	<grupo value="TECNICOS"></grupo>
+		<menuitem value="Gerar Ocorrência" outcome="/restrito/ocorrencia/PesquisaOcorrencia.xhtm"/>>
+	</submenu>
+	<submenu label="Usuário" icon="ui-icon-home">
 	<grupo value="COORDENADORES"></grupo>
 	<grupo value="TECNICOS"></grupo>
 		<menuitem value="Manter Usuário" outcome="/restrito/usuario/ManterUsuario.xhtml"/>>
