--- a/svsa-tp/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/svsa-tp/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -7,7 +7,10 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">	
 	
 	<h:head>		
-		<title>Teste JPA</title>		
+		<link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/resources/imagens/favicon.ico"/>				
+		<link rel="shortcut icon" type="image/x-icon" href="#{resource['imagens/favicon.ico']}"  title="Svsa"/>
+		<title>SVSA - Gaian.com.br</title>
+		<h:outputStylesheet library="css" name="sistema.css" />
 	</h:head>
 			
 	<body>	
@@ -18,6 +21,12 @@
 	    <div class="card" id="conteudo">			
 			<ui:insert name="corpo" />
 		</div>
+	
+		<div class="card" id="footer">
+			<ui:include src="Footer.xhtml" />
+		</div>
 	 
     </body>	
+	
+
 </html>
