--- a/src/main/webapp/WEB-INF/template/menu.xml
+++ b/src/main/webapp/WEB-INF/template/menu.xml
@@ -1,9 +1,11 @@
 <!DOCTYPE xml>
 <menu>
-	<submenu label="Usuário" icon="ui-icon-home">
+	<submenu label="Ocorrencias" icon="ui-icon-home">
 	<grupo value="COORDENADORES"></grupo>
+	<grupo value="GESTORES"></grupo>
+	<grupo value="ADMINISTRATIVOS"></grupo>
 	<grupo value="TECNICOS"></grupo>
-		<menuitem value="Manter Usuário" outcome="/restrito/usuario/ManterUsuario.xhtml"/>>
+		<menuitem value="Pendências" outcome="/restrito/ocorrencia/GerirOcorrencia.xhtml"/>>
 	</submenu>
 	<submenu label="Unidade" icon="ui-icon-home">
 	<grupo value="COORDENADORES"></grupo>
