--- a/src/main/webapp/WEB-INF/template/menu.xml
+++ b/src/main/webapp/WEB-INF/template/menu.xml
@@ -1,13 +1,10 @@
 <!DOCTYPE xml>
 <menu>
 	<submenu label="Ocorrencias" icon="ui-icon-home">
+	<grupo value="ADMINISTRATIVOS"></grupo>
 	<grupo value="COORDENADORES"></grupo>
 	<grupo value="GESTORES"></grupo>
 	<grupo value="TECNICOS"></grupo>
 		<menuitem value="Pendências" outcome="/restrito/ocorrencia/GerirOcorrencia.xhtml"/>>
-	</submenu>
-	<submenu label="Unidade" icon="ui-icon-home">
-	<grupo value="COORDENADORES"></grupo>
-		<menuitem value="Manter Unidade" outcome="/restrito/unidade/ManterUnidade.xhtml"/>
 	</submenu>
 </menu>
