Atualização pesquisa ocorrencia, ferramenta de busca por periodo e por status, geração de pdf.

--- a/src/main/webapp/WEB-INF/template/menu.xml
+++ b/src/main/webapp/WEB-INF/template/menu.xml
@@ -10,4 +10,9 @@
 	<grupo value="COORDENADORES"></grupo>
 		<menuitem value="Manter Unidade" outcome="/restrito/unidade/ManterUnidade.xhtml"/>
 	</submenu>
+	<submenu label="Relatório" icon="ui-icon-home">
+	<grupo value="COORDENADORES"></grupo>
+	<grupo value="GESTORES"></grupo>
+		<menuitem value="Gerar Relatório" outcome="/restrito/relatorio/PesquisaOcorrencia.xhtml"/>
+	</submenu>
 </menu>
